--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,9 @@
-group 'com.ssg.casino'
+group 'com.uc.casino'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 8
 
 repositories {
     jcenter()
@@ -17,5 +17,4 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "org.mockito:mockito-core:2.+"
-    testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
 }
